# shapes

./: .gitignore  .gitmodules  README.md  main.cpp  shapes.cpp
Source/: App.cpp  App.h  Array.h  Bitmap.cpp  Bitmap.h  CApp.cpp  CMakeLists.txt  CTransform.cpp  CTransform.h  Dict.h  DictBin.h  DictPara.h  Identi.h  Makefile  Matrix.cpp  Matrix.h  Rectangle.h  Relations.cpp  Relations.h  Shapes.cpp  Shapes.h  Storage.cpp  Storage.h  main.cpp
Source/Containers/: BinTree.h  list.h
Source/Dictionaries/: ABC.h  DictArray.h  DictList.h  DictPara.h
Tests/: Makefile  test.cpp
applib/: CMakeLists.txt
applib/include/: App.h  Bitmap.h  BitmapPrinter.h  Rectangle.h  Shapes.h
applib/include/Relations/: PointBelongsToSegment.h  PointCoincident.h  PointDistance.h  PointsSymmetrySegment.h  SegmentLength.h  SegmentNormal.h  SegmentVertical.h
applib/src/: BitmapPrinter.cpp  Shapes.cpp
